# blender_gsd

./: .coverage  .coveragerc  .gitignore  .gitmodules  Happy.html  Makefile  README.md  corruption_report.txt  pyproject.toml  pytest.ini
.planning/: ABILITY_MATRIX.md  AUTONOMOUS_EXECUTION_PLAN.md  AUTONOMOUS_EXECUTION_SUMMARY.md  CINEMATIC_ROADMAP.md  CINEMATOGRAPHY_RULES.md  CONSOLIDATED_COUNCIL_REVIEW.md  CONTROL_SURFACE_WORKFLOW.md  COUNCIL_REVIEW_REPORT.md  DEPARTMENTS_QUICK_REF.md  EXPANDED_ROADMAP.md  FINDINGS.md  FULL_PRODUCTION_SYSTEM.md  GROUND_TEXTURES_COUNCIL_PLAN.md  MSG-1998-INTEGRATION.md  MSG-1998-WORK-ASSIGNMENTS.md  PHASE_DEPENDENCIES.md  PHASE_INDEX.md  PLAN_STANDARDS.md  PROJECT.md  REQUIREMENTS.md  REQUIREMENTS_ANAMORPHIC.md  REQUIREMENTS_ANIMATION.md  REQUIREMENTS_CINEMATIC.md  REQUIREMENTS_FOLLOW_CAMERA.md  REQUIREMENTS_GREASE_PENCIL.md  REQUIREMENTS_PRODUCTION_TRACKING.md  REQUIREMENTS_RETRO_GRAPHICS.md  REQUIREMENTS_SHOT_PRESETS.md  REQUIREMENTS_TENTACLE.md  REQUIREMENTS_TRACKING.md  RESEARCH_CHARLOTTE_DIGITAL_TWIN.md  ROADMAP.md  SCENE_GENERATION_MASTER_PLAN.md  STATE.md  TUTORIAL_MASTER_PLAN.md  TUTORIAL_UTILITIES_PLAN.md  _MANIFEST.md  autonomous-log.md  projection-mapping-design.md
config/: asset_categories.yaml  asset_library.yaml  asset_registry.yaml
docs/: ADDON_ASSESSMENT.md  ADVANCED_BLENDER_TIPS_30.md  ARCHITECTURE.md  BLENDER_50_ARRAY_MODIFIER_KNOWLEDGE.md  BLENDER_50_KNOWLEDGE_SYNTHESIS.md  BLENDER_51_TUTORIAL_KNOWLEDGE.md  CAMERA_CONTROL_GUIDE.md  CHARLOTTE_GEOJSON_WORKFLOW.md  CLAUDE_PROMPTS.md  GENERATIVE_ART_TECHNIQUES.md  (+17 more)
(+1871 files in other folders)
